# Projet-MeetingPro

./: # TODO list.md  .gitignore  README.md  build_starter.cmd  build_to_exe.cmd  graphical_interface.txt  main.py  pyproject.toml  test.py
Virtual_env/: pyvenv.cfg
Virtual_env/Code/Graphical_interface/: Starter.py
Virtual_env/Code/calendar_logic/: reservation.py
Virtual_env/Code/room_logic/: conference.py  standard.py
persons/: -2008586448267339760.json  14b6ac479f69fb281cb074a53a55108f7e54b7203c66bfa0de5088c87d9af33b copy.json
rapport/: main.tex  project.bib
room/: Conference Room.json  TestRoom.json  Test_Conference.json  Test_IT.json  Test_Standard.json  test room.json
src/Graphical_interface/: Starter.py
src/calendar_logic/: ToDo  person.py  reservation.py
src/controller/: ToDo  add_client.py  add_room.py  list_client.py  list_reservations.py  list_rooms.py  reservation.py  verify_open_rooms.py
src/gui/: account_manager.py  add_client_gui.py  bg_image.py  calendar.py  create_calendar.py  login.py  main_gui.py
src/gui/adding/: new_person.py
src/person_logic/: ToDo  person.py  verify_overlapping.py
src/persons/: -2045933320992585402.json
src/room/: E.json
src/room_logic/: Todo  __init__.py  computer.py  computer_room.py  conference.py  standard.py  verify_open_roms.py
src/room_project/: cli.py
src/room_project/controller/: add_client.py  add_room.py  (+8 more)
tests/: conftest.py  test_01_person.py  test_02_standard.py  test_03_computer.py  test_04_conference.py  test_05_add_room.py  test_06_duration.py  test_07_verify_overlapping.py  test_08_reservation.py  test_person.py
(+8 files in other folders)
